Base clone of Marlin 2.1.2

--- a/ini/stm32f1-maple.ini
+++ b/ini/stm32f1-maple.ini
@@ -273,7 +273,7 @@ upload_protocol      = jlink
 extends              = STM32F1_maple
 board                = genericSTM32F103RC
 board_build.address  = 0x08005000
-board_build.encrypt_mks   = mksLite.bin
+board_build.rename   = mksLite.bin
 board_build.ldscript = mks_robin_lite.ld
 
 #
