--- a/.github/workflows/autoBuildAndUpload.yaml
+++ b/.github/workflows/autoBuildAndUpload.yaml
@@ -8,12 +8,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+
       - uses: actions/cache@v3
         with:
+          ref: ${{ github.ref }}
           path: |
             ~/.cache/pip
-            ~/.platformio/.cache
-          key: ${{ runner.os }}-pio
+            ~/.platformio/.cache  
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
